--- a/ws-yoke-event/build.gradle
+++ b/ws-yoke-event/build.gradle
@@ -12,14 +12,14 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.palantir.git-version' version '0.12.3'
+    id 'com.gorylenko.gradle-git-properties' version '2.2.2'
+}
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-
-/*plugins {
-    id 'com.palantir.git-version' version '0.12.3'
-    id 'com.gorylenko.gradle-git-properties' version '2.2.2'
-}*/
 
 repositories {
     mavenCentral()
