--- a/ws-yoke-attender/src/main/resources/bootstrap.yml
+++ b/ws-yoke-attender/src/main/resources/bootstrap.yml
@@ -3,5 +3,7 @@ spring:
     name: yoke-attender
   cloud:
     config:
-      uri: http://localhost:8888
+      #uri: http://localhost:8888
       #uri: http://configuration:8888
+      discovery:
+        service-id: configuration
