--- a/discovery-service/src/main/resources/bootstrap.yml
+++ b/discovery-service/src/main/resources/bootstrap.yml
@@ -3,4 +3,6 @@ spring:
     name: discovery-service
   cloud:
     config:
-      uri: http://localhost:8888
+      #uri: http://localhost:8888
+      discovery:
+        service-id: configuration
