--- a/ws-yoke-event/src/main/resources/bootstrap.yml
+++ b/ws-yoke-event/src/main/resources/bootstrap.yml
@@ -3,6 +3,8 @@ spring:
     name: yoke-event
   cloud:
     config:
-      uri: http://localhost:8888
+      #uri: http://localhost:8888
       #uri: http://configuration:8888
+      discovery:
+        service-id: configuration
 
